--- a/analisis_descriptivo.ipynb
+++ b/analisis_descriptivo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -16,7 +16,6 @@
     "import seaborn as sns\n",
     "import duckdb\n",
     "\n",
-    "#DIR_DATOS = \"\"\"C:/Users/w8519/comparison_ped_noped/\"\"\"\n",
     "PARQUET_FILE = \"\"\"datos_urgencia_consolidados.parquet\"\"\"\n",
     "CSV_OUTPUT_FILE = \"\"\"datos_urgencia_consolidados_agrupados.csv\"\"\"\n",
     "duckdb.read_parquet(PARQUET_FILE)\n",
@@ -34,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,28 +48,67 @@
     "# \"\"\").show(max_rows = 500)\n",
     "\n",
     "#Identifica los servicios de salud asociados a cada region. Notamos que hay algunas inconsistencias en las referencias.\n",
-    "# duckdb.sql(\"\"\"SELECT distinct \n",
-    "#            CodigoRegion             \n",
-    "#            ,CodigoDependencia        \n",
-    "#            ,NombreDependencia        \n",
-    "# FROM datos_urgencia_consolidados.parquet\n",
-    "# -- where CodigoRegion is null\n",
-    "# -- IdEstablecimiento like '%801'\n",
-    "# order by CodigoDependencia\n",
-    "# \"\"\").show(max_rows = 500)"
+    "lista_servicios_salud = duckdb.sql(\"\"\"SELECT distinct \n",
+    "           CodigoDependencia        \n",
+    "           ,NombreDependencia        \n",
+    "FROM datos_urgencia_consolidados.parquet\n",
+    "-- where CodigoRegion is null\n",
+    "-- IdEstablecimiento like '%801'\n",
+    "order by CodigoDependencia\n",
+    "\"\"\").df()\n",
+    "lista_servicios_salud.to_csv('lista_servicios_salud.csv',sep=\";\", encoding = 'latin1')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "┌──────────────────────────┬─────────────┬─────────┬─────────┬─────────┬─────────┐\n",
+       "│       column_name        │ column_type │  null   │   key   │ default │  extra  │\n",
+       "│         varchar          │   varchar   │ varchar │ varchar │ varchar │ varchar │\n",
+       "├──────────────────────────┼─────────────┼─────────┼─────────┼─────────┼─────────┤\n",
+       "│ IdEstablecimiento        │ VARCHAR     │ YES     │ NULL    │ NULL    │ NULL    │\n",
+       "│ NEstablecimiento         │ VARCHAR     │ YES     │ NULL    │ NULL    │ NULL    │\n",
+       "│ IdCausa                  │ BIGINT      │ YES     │ NULL    │ NULL    │ NULL    │\n",
+       "│ GlosaCausa               │ VARCHAR     │ YES     │ NULL    │ NULL    │ NULL    │\n",
+       "│ Total                    │ BIGINT      │ YES     │ NULL    │ NULL    │ NULL    │\n",
+       "│ Menores_1                │ BIGINT      │ YES     │ NULL    │ NULL    │ NULL    │\n",
+       "│ De_1_a_4                 │ BIGINT      │ YES     │ NULL    │ NULL    │ NULL    │\n",
+       "│ De_5_a_14                │ BIGINT      │ YES     │ NULL    │ NULL    │ NULL    │\n",
+       "│ De_15_a_64               │ BIGINT      │ YES     │ NULL    │ NULL    │ NULL    │\n",
+       "│ De_65_y_mas              │ BIGINT      │ YES     │ NULL    │ NULL    │ NULL    │\n",
+       "│ fecha                    │ VARCHAR     │ YES     │ NULL    │ NULL    │ NULL    │\n",
+       "│ semana                   │ BIGINT      │ YES     │ NULL    │ NULL    │ NULL    │\n",
+       "│ GLOSATIPOESTABLECIMIENTO │ VARCHAR     │ YES     │ NULL    │ NULL    │ NULL    │\n",
+       "│ GLOSATIPOATENCION        │ VARCHAR     │ YES     │ NULL    │ NULL    │ NULL    │\n",
+       "│ GlosaTipoCampana         │ VARCHAR     │ YES     │ NULL    │ NULL    │ NULL    │\n",
+       "│ CodigoRegion             │ DOUBLE      │ YES     │ NULL    │ NULL    │ NULL    │\n",
+       "│ NombreRegion             │ VARCHAR     │ YES     │ NULL    │ NULL    │ NULL    │\n",
+       "│ CodigoDependencia        │ DOUBLE      │ YES     │ NULL    │ NULL    │ NULL    │\n",
+       "│ NombreDependencia        │ VARCHAR     │ YES     │ NULL    │ NULL    │ NULL    │\n",
+       "│ CodigoComuna             │ DOUBLE      │ YES     │ NULL    │ NULL    │ NULL    │\n",
+       "│ NombreComuna             │ VARCHAR     │ YES     │ NULL    │ NULL    │ NULL    │\n",
+       "│ __index_level_0__        │ BIGINT      │ YES     │ NULL    │ NULL    │ NULL    │\n",
+       "├──────────────────────────┴─────────────┴─────────┴─────────┴─────────┴─────────┤\n",
+       "│ 22 rows                                                              6 columns │\n",
+       "└────────────────────────────────────────────────────────────────────────────────┘"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#lista todas las columnas del archivo parquet\n",
-    "#duckdb.sql(\"\"\"describe \n",
-    "#select * \n",
-    "#FROM datos_urgencia_consolidados.parquet\n",
-    "#\"\"\")\n",
+    "duckdb.sql(\"\"\"describe \n",
+    "select * \n",
+    "FROM datos_urgencia_consolidados.parquet\n",
+    "\"\"\")\n",
     "#lista todas las Idcausa con su correspondientes glosa descriptiva\n",
     "#duckdb.sql(\"\"\"select distinct IdCausa, GlosaCausa from datos_urgencia_consolidados.parquet\n",
     "#order by IdCausa\"\"\").show(max_rows = 100)\n",
