actualizacion para incluir macrozonas

--- a/fig3_agrupacion_geografica_periodos_diferentes.ipynb
+++ b/fig3_agrupacion_geografica_periodos_diferentes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -13,28 +13,42 @@
     "import scipy as sp\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "#import seaborn as sns\n",
-    "import duckdb\n",
-    "\n",
-    "DIR_DATOS = \"\"\"./\"\"\"\n",
-    "PARQUET_FILE = \"\"\"datos_urgencia_consolidados.parquet\"\"\"\n",
-    "CSV_OUTPUT_FILE = \"\"\"datos_urgencia_consolidados_agrupados.csv\"\"\"\n",
-    "duckdb.read_parquet(\"\"\"datos_urgencia_consolidados.parquet\"\"\")\n",
-    "\n",
-    "def find_peak_week(df, column,window = 5):\n",
-    "    if window % 2 == 0:\n",
-    "        print(\"please chooose an odd lenght window\")\n",
-    "        return\n",
-    "    n = df.shape[0]\n",
-    "    #df_copy = df.copy()\n",
-    "    compare = df[column].drop([k for k in range(window)]).reset_index(drop= True) - df[column].drop([n-window + k for k in range(window)]).reset_index(drop= True)\n",
-    "    compare= compare.reset_index(drop= True)\n",
-    "    return np.argmax(compare)+window //2 "
+    "import duckdb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "periodo = 365\n",
+    "\n",
+    "zona_norte_grande = \"\"\"(1,2,3)\"\"\"\n",
+    "zona_norte_chico = \"\"\"(4,5)\"\"\"\n",
+    "zona_nucleo_central = \"\"\"(6,7,8,9,10,11,12,13,14,15,16,17)\"\"\"\n",
+    "zona_concepcion_frontera = \"\"\"(18,19,20,21,28,29)\"\"\"\n",
+    "zona_region_de_los_lagos = \"\"\"(22,23,24)\"\"\"\n",
+    "zona_region_canales = \"\"\"(25,26,33)\"\"\"\n",
+    "\n",
+    "lista_zonas = [\"ZonaNorteGrande\",\n",
+    "               \"ZonaNorteChico\",\n",
+    "               \"ZonaNucleoCentral\",\n",
+    "               \"ZonaConcepcionLaFrontera\",\n",
+    "               \"ZonaRegionDeLosLagos\",\n",
+    "               \"ZonaRegionCanales\"]\n",
+    "\n",
+    "lista_zonas_legend = [\"Zona Norte Grande\",\n",
+    "               \"Zona Norte Chico\",\n",
+    "               \"Zona Nucleo Central\",\n",
+    "               \"Zona Concepción y la Frontera\",\n",
+    "               \"Zona Región De Los Lagos\",\n",
+    "               \"Zona de los Región Canales\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,14 +67,6 @@
     "# a diferentes regiones geográficas. Las zonas están determinadas \n",
     "# por lo servicios de salud que las componen\n",
     "# en los gráficos se muestra la información para diferentes años\n",
-    "periodo = 365\n",
-    "\n",
-    "zona_norte_grande = \"\"\"(1,2,3)\"\"\"\n",
-    "zona_norte_chico = \"\"\"(4,5)\"\"\"\n",
-    "zona_nucleo_central = \"\"\"(6,7,8,9,10,11,12,13,14,15,16,17)\"\"\"\n",
-    "zona_concepcion_frontera = \"\"\"(18,19,20,21,28,29)\"\"\"\n",
-    "zona_region_de_los_lagos = \"\"\"(22,23,24)\"\"\"\n",
-    "zona_region_canales = \"\"\"(25,26,33)\"\"\"\n",
     "\n",
     "\n",
     "def common_filter_zona(zona):\n",
@@ -143,14 +149,8 @@
     "    ax = fig.add_subplot(2,3,k+1) \n",
     "    df_dict = {key[0]: d for key, d in df3[['zona','year','nrodia','atenciones']].groupby(['zona'])}\n",
     "    #targets = list(df_dict.keys())\n",
-    "    targets = [\"ZonaNorteGrande\",\n",
-    "               \"ZonaNorteChico\",\n",
-    "               \"ZonaNucleoCentral\",\n",
-    "               \"ZonaConcepcionLaFrontera\",\n",
-    "               \"ZonaRegionDeLosLagos\",\n",
-    "               \"ZonaRegionCanales\"]\n",
     "    ax.set_prop_cycle(color = plt.get_cmap(\"tab10\").colors)\n",
-    "    for key in targets:\n",
+    "    for key in lista_zonas:\n",
     "        plt.plot(df_dict[key]['nrodia'],100*df_dict[key]['atenciones'].rolling(7,center=True).mean()/float(sum(df_dict[key]['atenciones'])) )\n",
     "    ax.set_ylim(ymin=0)\n",
     "    ax.set_ylim(ymax=0.6)\n",
@@ -164,16 +164,10 @@
     "#show legend in last plot space\n",
     "ax = fig.add_subplot(2,3,6) \n",
     "ax.set_prop_cycle(color = plt.get_cmap(\"tab10\").colors)\n",
-    "for key in targets:\n",
+    "for key in lista_zonas:\n",
     "    plt.plot(range(1),range(1))\n",
-    "targets = [\"Zona Norte Grande\",\n",
-    "               \"Zona Norte Chico\",\n",
-    "               \"Zona Nucleo Central\",\n",
-    "               \"Zona Concepción y la Frontera\",\n",
-    "               \"Zona Región De Los Lagos\",\n",
-    "               \"Zona de los Región Canales\"]\n",
     "\n",
-    "ax.legend(targets,loc='center left',fontsize = 10 )\n",
+    "ax.legend(lista_zonas_legend,loc='center left',fontsize = 10 )\n",
     "#ax.clear()\n",
     "#ax.legend(h, l, loc='upper left')\n",
     "ax.axis('off')\n",
@@ -202,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
