--- a/fig5_diferencias_acumuladas_grupo_etario.ipynb
+++ b/fig5_diferencias_acumuladas_grupo_etario.ipynb
@@ -13,23 +13,18 @@
     "import scipy as sp\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "import duckdb\n",
     "\n",
-    "DIR_DATOS = \"\"\"./\"\"\"\n",
-    "PARQUET_FILE = \"\"\"datos_urgencia_consolidados.parquet\"\"\"\n",
-    "CSV_OUTPUT_FILE = \"\"\"datos_urgencia_consolidados_agrupados.csv\"\"\"\n",
-    "duckdb.read_parquet(\"\"\"datos_urgencia_consolidados.parquet\"\"\")\n",
-    "\n",
-    "def find_peak_week(df, column,window = 5):\n",
-    "    if window % 2 == 0:\n",
-    "        print(\"please chooose an odd lenght window\")\n",
-    "        return\n",
-    "    n = df.shape[0]\n",
-    "    #df_copy = df.copy()\n",
-    "    compare = df[column].drop([k for k in range(window)]).reset_index(drop= True) - df[column].drop([n-window + k for k in range(window)]).reset_index(drop= True)\n",
-    "    compare= compare.reset_index(drop= True)\n",
-    "    return np.argmax(compare)+window //2 "
+    "duckdb.read_parquet(\"\"\"datos_urgencia_consolidados.parquet\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grupo_etario_list_titles=[\"Menores 1\",\"De 1 a 4\",\"De 5 a 14\",\"De 15 a 64\",\"De 65 y más\"]"
    ]
   },
   {
@@ -57,9 +52,7 @@
     "    , sum(De_65_y_mas) as De_65_y_mas\n",
     "FROM datos_urgencia_consolidados.parquet\n",
     "where IdCausa in (3,4,5,6,10,11) \n",
-    "--where IdCausa =6\n",
     "and fecha like '%2019'\n",
-    "--and CodigoRegion = 5\n",
     "and CodigoDependencia = 6\n",
     "group by fecha, year, nrodia\n",
     "having  nrodia <=365\n",
@@ -102,17 +95,13 @@
    "source": [
     "fig = plt.figure(figsize = (8,6))\n",
     "ax = fig.add_subplot(1,1,1) \n",
-    "column = \"De_1_a_4\"\n",
+    "#column = \"De_1_a_4\"\n",
     "ax.set_prop_cycle(color = plt.get_cmap(\"tab10\").colors)\n",
     "plt.plot(g1[\"nrodia\"],100*g1[[\"acum_Menores_1\",\"acum_De_1_a_4\",\"acum_De_5_a_14\",\"acum_De_15_a_64\",\"acum_De_65_y_mas\"]],\n",
     "        label=[\"Menores_1\",\"De_1_a_4\",\"De_5_a_14\",\"De_15_a_64\",\"De_65_y_mas\"])\n",
     "plt.plot(g1[\"nrodia\"],100*g1[\"uniform\"], linestyle='dashed')\n",
     "#plt.axvline(x = g1[\"nrodia\"][find_peak_week(g1,\"acum_\"+column,5)], color='r', linestyle='dashed')\n",
-    "targets = [\"Menores 1\",\"De 1 a 4\",\"De 5 a 14\",\"De 15 a 64\",\"De 65 y más\"]\n",
-    "plt.legend(targets, fontsize = 14)\n",
-    "#plt.plot(g1[\"fecha\"],g1[\"acum_De_5_a_14\"])\n",
-    "#plt.plot(g1[\"fecha\"],g1[\"acum_De_15_a_64\"])\n",
-    "#plt.plot(g1[\"fecha\"],g1[\"acum_De_65_y_mas\"])\n",
+    "plt.legend(grupo_etario_list_titles, fontsize = 14)\n",
     "ax.set_title('Atenciones diarias acumuladas correspondientes \\nal año 2019 para cada grupo etario', fontsize = 16)\n",
     "ax.set_xlabel('Número de Día', fontsize = 14)\n",
     "ax.set_ylabel('Atenciones Acumuladas (%)', fontsize = 16)\n",
@@ -138,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
