--- a/fig9_analsis_SVM_from_PCA_RM.ipynb
+++ b/fig9_analsis_SVM_from_PCA_RM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "61de1472",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "53262963",
    "metadata": {},
    "outputs": [],
@@ -28,20 +28,21 @@
     "#     GLOSATIPOESTABLECIMIENTO\n",
     "# FROM datos_urgencia_consolidados.parquet\n",
     "# \"\"\").df()\n",
-    "# df2"
+    "# df2\n",
+    "periodo = 365\n",
+    "USE_CUMSUM = True\n",
+    "year_list = ['2017','2018','2019','2022','2023']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "219f6ebe",
    "metadata": {},
    "outputs": [],
    "source": [
     "#read data from parquet file\n",
     "#number of days from the beginning of the year to consider in the analysis\n",
-    "periodo = 365\n",
-    "USE_CUMSUM = True\n",
     "\n",
     "common_filter = \"\"\"\n",
     "FROM datos_urgencia_consolidados.parquet\n",
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "14074201",
    "metadata": {},
    "outputs": [
@@ -195,7 +196,7 @@
     "#Full average: Goal to compare populations across years, \n",
     "#ages and locations by trying to stablish a baseline reference demand.\n",
     "#WE scale the data dividing by the total yearly demand in order to distinguish behaviour\n",
-    "year_list = ['2017','2018','2019','2022','2023']\n",
+    "\n",
     "for k in range(5):\n",
     "    year_figure = year_list[k]\n",
     "    \n",
@@ -277,7 +278,6 @@
     "    etiquetas_servicios_salud = ['Met. Norte', 'Met. Occidente','Met. Central',\n",
     "    'Met. Oriente', 'Met. Sur', 'Met. Suroriente']\n",
     "    \n",
-    "    #colors = ['r', 'g', 'b','orange', 'pink']\n",
     "    ax.set_prop_cycle(color = plt.get_cmap(\"tab10\").colors)\n",
     "    for servicio_salud in [9,10,11,12,13,14]:\n",
     "        for column in targets:\n",
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "233a737f",
    "metadata": {},
    "outputs": [],
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "c8708d6b",
    "metadata": {},
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "c22d0be0",
    "metadata": {},
    "outputs": [],
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "5b0e0096",
    "metadata": {},
    "outputs": [],
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "43a2fef2",
    "metadata": {},
    "outputs": [],
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "0a791e34",
    "metadata": {},
    "outputs": [],
@@ -737,7 +737,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
